# mapkick.py

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
mapkick/django/: __init__.py
mapkick/flask/: __init__.py
tests/: test_django.py  test_flask.py
