[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mapkick"
version = "0.1.5"
description = "Create beautiful JavaScript maps with one line of Python"
readme = "README.md"
authors = [
    {name = "Andrew Kane", email = "andrew@ankane.org"}
]
license = {text = "MIT"}
requires-python = ">= 3.7"

[project.urls]
Homepage = "https://github.com/ankane/mapkick.py"

[tool.setuptools.package-data]
mapkick = ["licenses/*", "django/static/*"]
